change title modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,4 @@
-@import "./settings"
+@import "./settings";
+@import "./components/header";
+@import "./components/create-employee";
+@import "./components/form";
